[package]
name = "shiguredo_svt_av1"
version = "2026.1.0-canary.0"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "Rust bindings for SVT-AV1"
homepage = "https://github.com/shiguredo/svt-av1-rs"
repository = "https://github.com/shiguredo/svt-av1-rs"
readme = "README.md"
build = "build.rs"
include = ["/src/**/*", "/build.rs", "/README.md", "/LICENSE"]

[features]
source-build = []

[dependencies]
log = "0.4.27"

[build-dependencies]
bindgen = "0.72.1"
shiguredo_cmake = "4.3.0"
shiguredo_toml = "2026.1.0"

# 以降は外部ライブラリビルド用のメタデータ
# (この内容は build.rs の中からのみ参照される)
[package.metadata.external-dependencies]
SVT-AV1 = { git = "https://gitlab.com/AOMediaCodec/SVT-AV1.git", version = "v4.0.1" }
